<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".screenshots.FragmentCommunity">

    <Button
        android:id="@+id/MentorBtn"
        android:layout_width="111dp"
        android:layout_height="47dp"
        android:layout_marginTop="@android:dimen/notification_large_icon_height"
        android:background="@drawable/layout_btn"
        android:text="@string/Find_Mentor"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.791"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frontpageHeader"
        app:layout_constraintVertical_bias="0.087" />

    <Button
        android:id="@+id/ProfilBtn"
        android:layout_width="111dp"
        android:layout_height="47dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/layout_btn"
        android:text="@string/ProfileBtn"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frontpageHeader"
        app:layout_constraintVertical_bias="0.087" />

    <Button
        android:id="@+id/DiscoverBtn"
        android:layout_width="111dp"
        android:layout_height="47dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/layout_btn"
        android:text="@string/Discover"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/ProfilBtn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/ProfilBtn"
        app:layout_constraintTop_toBottomOf="@+id/ProfilBtn" />

    <TextView
        android:id="@+id/frontpageHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/header"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colordarkEggwhite"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SchedulesBtn"
        android:layout_width="111dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/layout_btn"
        android:text="@string/Schedule"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/MentorBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/MentorBtn"
        app:layout_constraintTop_toBottomOf="@+id/MentorBtn" />

    <Button
        android:id="@+id/UpgradeBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/layout_btn"
        android:text="@string/Upgrade"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SchedulesBtn"
        app:layout_constraintVertical_bias="0.476" />


</androidx.constraintlayout.widget.ConstraintLayout>