<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screenshots.FragmentLogin">

    <!-- TODO: Update blank fragment layout -->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginFrag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">


        <TextView
            android:id="@+id/LoginText"
            android:layout_width="277dp"
            android:layout_height="68dp"
            android:layout_marginTop="48dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#4CAF50"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/EmailText"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_marginTop="68dp"
            android:ems="10"
            android:hint="E-mail"
            android:inputType="textEmailAddress"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginText" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/EmailText" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="304dp"
            android:layout_height="49dp"
            android:background="@drawable/layout_btn"
            android:text="@string/Login"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordText"
            app:layout_constraintVertical_bias="0.397" />

        <TextView
            android:id="@+id/sign_up_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orsignup"
            android:textStyle=""
            app:layout_constraintEnd_toStartOf="@+id/forgot_password"
            app:layout_constraintHorizontal_bias="0.551"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="52dp"
            android:layout_marginRight="52dp"
            android:text="@string/forgotpassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>