<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <Button
            android:id="@+id/mentor_btn"
            android:layout_width="120dp"
            android:layout_height="103dp"
            android:layout_marginBottom="84dp"
            android:background="@drawable/layout_type_selector"
            android:text="@string/mentor"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mentee_btn"
            app:layout_constraintHorizontal_bias="0.426"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/mentee_btn"
            android:layout_width="120dp"
            android:layout_height="103dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="84dp"
            android:background="@drawable/layout_type_selector"
            android:text="@string/mentee"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/move_on"
            android:layout_width="276dp"
            android:layout_height="34dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/layout_type_btn_moveon"
            android:text="Videre"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.659"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/header"
            android:text="@string/app_name"
            android:textColor="@color/colordarkEggwhite"
            android:textSize="110sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>